Opened 15 years ago

Closed 15 years ago

#4827 closed bug (fixed)

Crash in pthread_create

Reported by: kaliber Owned by: nobody
Priority: normal Milestone: R1
Component: System/POSIX Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Attachments (1)

pthread-create-crash.patch (543 bytes ) - added by kaliber 15 years ago.
proposed patch

Download all attachments as: .zip

Change History (4)

by kaliber, 15 years ago

Attachment: pthread-create-crash.patch added

proposed patch

comment:1 by v, 15 years ago

attr is initialized to NULL, therefore with your patch pthread_create returns EINVAL whenever a non-NULL _attr is used as parameter. Even when valid. Right?

comment:2 by v, 15 years ago

Perhaps

if (*_attr == NULL)
  return EINVAL;
else
  attr = *_attr;

is more like it. And looking at the error codes of the rest of the file

if (*_attr == NULL)
  return B_BAD_VALUE;
else
  attr = *_attr;

would be more consistent.

comment:3 by axeld, 15 years ago

Resolution: fixed
Status: newclosed

Thanks! It's fixed in hrev33774.

Note: See TracTickets for help on using tickets.