* pthread_create() will now check if attr is initialized, thus fixing bug #4827. * pthread_kill() no longer sets errno. * Use POSIX error codes in POSIX code.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@33774 a95241bf-73f2-0310-859d-f6bbb57e9c96